Build homes section with responsive card grid. Add images with overlapping heading and like button. Style like button with hover effect, add tabindex in HTML to use focus state to change to secondary colour with primary colour stroke to ensure visibility on dark images.

--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -17,7 +17,7 @@
 	&__img--2 {
 		width: 115%;
 		grid-area: 4 / 4 / 6 / 7;
-		z-index: 20;
+		z-index: 10;
 		box-shadow: 0 2rem 5rem rgba(#000, .2);
 	}
 
